# DOF-A-M

./: CMakeLists.txt  XL_URK_Database.db  main.md  rel_mod.puml  run.sh
.trae/documents/: 完善人脸识别项目业务层.md
src/business/: app.cpp  app.hpp  face_recognition_main.cpp  main.cpp  test_actual.cpp  test_event_driven.cpp
src/data/: XL_URK_Database.db
src/data/models/: face_recognition_model.yml
